experimental/parser/testdata/parser/package/nosemi.proto.stderr.txt
error: unexpected end-of-file after `package` declaration
  --> testdata/parser/package/nosemi.proto:17:13
   |
17 | package test
   |             ^ expected `;`
   |
  help: consider inserting a `;`
   |
17 | package test;
   |             +

encountered 1 error
